# caterpillar

./: .travis.yml  CMakeLists.txt
experiments/: experiments.hpp
include/: CMakeLists.txt
include/caterpillar/: caterpillar.hpp
include/caterpillar/details/: bron-kerbosch.hpp  bron-kerbosch_utils.hpp  bron_kerbosch.hpp  bron_kerbosch_utils.hpp  depth_costs.hpp  utils.hpp
include/caterpillar/io/: write_qsharp.hpp
include/caterpillar/solvers/: bsat_solver.hpp  solver_manager.hpp  z3_inplace_solver.hpp  z3_solver.hpp  z3_solver_inplace.hpp
include/caterpillar/structures/: abstract_network.hpp  pebbling_view.hpp
include/caterpillar/synthesis/: decompose_with_ands.hpp  lhrs.hpp  stg_to_mcx.hpp  xag_tracer.hpp
include/caterpillar/synthesis/strategies/: abstract_xag_mapping_strategy.hpp  action.hpp  aig_mapping_strategy.hpp  bennett_mapping_strategy.hpp  best_fit_mapping_strategy.hpp  pebbling_mapping_strategy.hpp  xag_mapping_strategy.hpp
lib/: CMakeLists.txt
lib/mockturtle/mockturtle/: mockturtle.hpp  traits.hpp
lib/mockturtle/mockturtle/views/: depth_view.hpp
test/: test_xag.hpp
test/details/: cliques.cpp
test/io/: write_qsharp.cpp
test/solvers/: z3_inplace_solver.cpp  z3_solver.cpp
test/strategies/: abstract_xag_mapping_strategy copy.cpp  abstract_xag_mapping_strategy.cpp  aig_mapping_strategy.cpp  pebbling_mapping_strategy.cpp  test_xag.hpp  xag_mapping_strategy.cpp
test/structures/: depth_view.cpp  mxag.cpp
test/synthesis/: abstract_xag_tracer.cpp  stg_from_esop.cpp  xag_tracer.cpp
(+1 files in other folders)
